# Poetry_homework

./: README.md  main.py  pyproject.toml
src/: mask.py  processing.py  widget.py
tests/: conftest.py  test_mask.py  test_processing.py  test_widget.py
