[tool.poetry]
name = "poetry-homework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
requires-python = ">=3.13, <4.0"

[tool.poetry.dependencies]
python = ">=3.13, <4.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.15.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true

[tool.black]
line-length = 119
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | dist
)/'''

[tool.isort]
profile = "black"  # автоматически подхватит настройки, совместимые с black
line_length = 119  # ключ через подчёркивание (_), а не дефис (-)
force_sort_within_sections = true
known_third_party = ["requests"]  # если есть сторонние библиотеки
known_first_party = ["src"]  # если ваш код лежит в src/